@@ -12,9 +12,10 @@ wajig (2.5~pre) unstable; urgency=low
     less-surprising REMOVE/PURGE experience (whereby it would remove packages
     that are not related to packages being removed).
   * {REMOVE,PURGE}ORPHANS: fix exception that happened with --simulate option
-  * TOUPGRADE: Fix an exception that occurs when one has removed ~/.wajig dir
+  * TOUPGRADE: fix an exception that occurs when one has removed ~/.wajig dir
+  * NEWUPGRADES: doesn't seem to provide much more than TOUGPRADE, so remove
 
- -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Fri, 30 Mar 2012 22:31:56 +0200
+ -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Fri, 30 Mar 2012 23:07:32 +0200
 
 wajig (2.4.1) unstable; urgency=low
 
